# semantic-communication

./: .gitignore  OpenAI Semantic Similarity.py  README.md  baseline_train_entire_network.py  baseline_train_source_relay.py  channel_enc_dec_train.py  channel_train_test.py  demodulator.m  end_to_end_train.py  end_to_end_v2.py  environment.yml  eval.py  eval_baseline.py  eval_baseline_source_relay.py  eval_bleu_only.py  eval_conventional.py  eval_conventional_source_relay.py  eval_llm_baseline.py  eval_paraphrase_detector.py  eval_semantic_transformer.py  eval_task_oriented.py  eval_task_oriented_baseline.py  eval_task_retrieval.py  generate_sequences.py  generate_sequences_semantic_transformer.py  generate_sequences_src_relay_block.py  main.py  modulator.m  plot_script.py  preprocess_data.py  preprocess_data_single_sentence.py  preprocess_paraphrase_data.py  pyproject.toml  semantic_similarity_stability_test.py  simple_main.py  simple_train.py  simplest_decoder.ipynb  train_adverarial_agent.py  train_end_to_end.py  train_paraphrase_detector.py  (+7 more)
Baseline/: eval_baseline.py  train_entire_network.py  train_source_relay.py
Baseline/baseline_models/: channel_enc_dec_blocks.py  tx_relay_rx_models.py
Baseline/data_processing/: data_handler.py  semantic_encoder.py
Baseline/utils/: channel.py  general.py
semantic_communication/conventional_tools/: bit_operator.py  bit_reed_solomon.py  conv_channels.py  conventional_source_relay.py  conventional_three_node_network.py  fixed_length_coding.py
semantic_communication/data_processing/: data_handler.py  europarl_dataset.py  (+1 more)
(+23 files in other folders)
