[tool.poetry]
name = "semantic-communication"
version = "0.1.0"
description = ""
authors = ["enesarda <enesarda22@gmail.com>"]
readme = "README.md"
packages = [{include = "semantic_communication"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
transformers = "^4.33.3"
scikit-learn = "^1.3.1"
w3lib = "^2.1.2"
nltk = "^3.8.1"
torch = "^2.1.0"
numpy = "^1.26.1"
matplotlib = "3.5.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.10.1"
aiohttp = "^3.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
